feat: Identity Matching fixes